setting .env for prod

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ APP_ENV=prod
 APP_DEBUG=true
 APP_KEY=Sdzwvtbjeuz0jNZrJpBS1YIExscxieTZ
 
-DB_HOST=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_HOST=ec2-54-235-151-252.compute-1.amazonaws.com:5432
+DB_DATABASE=dc5sa2lnha7740
+DB_USERNAME=cgudakcwzxtcib
+DB_PASSWORD=DTbOE2AIV1CflWgJwzBrIZQfdt
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -17,3 +17,14 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+/* bagian ini ke bawah hanya untuk note saja */
+LOCAL_DB_HOST=localhost
+LOCAL_DB_DATABASE=postgres
+LOCAL_DB_USERNAME=postgres
+LOCAL_DB_PASSWORD=
+
+PRODUCTION_DB_HOST=ec2-54-235-151-252.compute-1.amazonaws.com:5432
+PRODUCTION_DB_DATABASE=dc5sa2lnha7740
+PRODUCTION_DB_USERNAME=cgudakcwzxtcib
+PRODUCTION_DB_PASSWORD=DTbOE2AIV1CflWgJwzBrIZQfdt
