--- a/.env
+++ b/.env
@@ -19,6 +19,12 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 /* bagian ini ke bawah hanya untuk note saja */
+
+/* Settingan APP_ENV */
+untuk localhost APP_ENV=local
+untuk production APP_ENV=prod
+
+/* Settingan Database */
 LOCAL_DB_HOST=localhost
 LOCAL_DB_DATABASE=postgres
 LOCAL_DB_USERNAME=postgres
