--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ LOCAL_DB_DATABASE=postgres
 LOCAL_DB_USERNAME=postgres
 LOCAL_DB_PASSWORD=
 
-PRODUCTION_DB_HOST=ec2-54-235-151-252.compute-1.amazonaws.com:5432
+PRODUCTION_DB_HOST=ec2-54-235-151-252.compute-1.amazonaws.com
 PRODUCTION_DB_DATABASE=dc5sa2lnha7740
 PRODUCTION_DB_USERNAME=cgudakcwzxtcib
 PRODUCTION_DB_PASSWORD=DTbOE2AIV1CflWgJwzBrIZQfdt
