--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@ APP_ENV=prod
 APP_DEBUG=true
 APP_KEY=Sdzwvtbjeuz0jNZrJpBS1YIExscxieTZ
 
-DB_HOST=ec2-54-235-151-252.compute-1.amazonaws.com:5432
-DB_DATABASE=dc5sa2lnha7740
-DB_USERNAME=cgudakcwzxtcib
-DB_PASSWORD=DTbOE2AIV1CflWgJwzBrIZQfdt
+DB_HOST=localhost
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=
+
+DATABASE_URL=postgres://cgudakcwzxtcib:DTbOE2AIV1CflWgJwzBrIZQfdt@ec2-54-235-151-252.compute-1.amazonaws.com:5432/dc5sa2lnha7740
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -23,14 +25,3 @@ MAIL_ENCRYPTION=null
 /* Settingan APP_ENV */
 untuk localhost APP_ENV=local
 untuk production APP_ENV=prod
-
-/* Settingan Database */
-LOCAL_DB_HOST=localhost
-LOCAL_DB_DATABASE=postgres
-LOCAL_DB_USERNAME=postgres
-LOCAL_DB_PASSWORD=
-
-PRODUCTION_DB_HOST=ec2-54-235-151-252.compute-1.amazonaws.com
-PRODUCTION_DB_DATABASE=dc5sa2lnha7740
-PRODUCTION_DB_USERNAME=cgudakcwzxtcib
-PRODUCTION_DB_PASSWORD=DTbOE2AIV1CflWgJwzBrIZQfdt
