--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         ],
         "post-update-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize",
+            "php artisan optimize"
         ],
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
