--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "fzaninotto/faker": "1.4",
-        "illuminate/html": "5.*"
-    },
-    "require-dev": {
+        "illuminate/html": "5.*",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
+    },
+    "require-dev": {
     },
     "autoload": {
         "classmap": [
