--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "fzaninotto/faker": "1.4",
-        "illuminate/html": "5.*",
+        "fzaninotto/faker": "1.5",
+        "illuminate/html": "5.*"
+    },
+    "require-dev": {
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
-    },
-    "require-dev": {
     },
     "autoload": {
         "classmap": [
