--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "fzaninotto/faker": "1.5",
+        "fzaninotto/faker": "1.3.*@dev",
         "illuminate/html": "5.*"
     },
     "require-dev": {
