--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=
 
-DATABASE_URL=postgres://cgudakcwzxtcib:DTbOE2AIV1CflWgJwzBrIZQfdt@ec2-54-235-151-252.compute-1.amazonaws.com:5432/dc5sa2lnha7740
+DATABASE_URL=postgres://ntuzzvouvidbud:aP_MbJD550M-Np_5aCovRFQsCU@ec2-54-83-58-191.compute-1.amazonaws.com:5432/d4ghnb4cipu6g6
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
