--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_KEY=Sdzwvtbjeuz0jNZrJpBS1YIExscxieTZ
 DB_HOST=localhost
 DB_DATABASE=postgres
 DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PASSWORD=wiraganteng
 
 DATABASE_URL=postgres://ntuzzvouvidbud:aP_MbJD550M-Np_5aCovRFQsCU@ec2-54-83-58-191.compute-1.amazonaws.com:5432/d4ghnb4cipu6g6
 
